--- a/feedback_plugin/src/main/java/np1815/feedback/plugin/ui/FeedbackPopup.form
+++ b/feedback_plugin/src/main/java/np1815/feedback/plugin/ui/FeedbackPopup.form
@@ -157,6 +157,29 @@
               </component>
             </children>
           </grid>
+          <grid id="1553c" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+            <margin top="0" left="0" bottom="0" right="0"/>
+            <constraints>
+              <tabbedpane title="Logging"/>
+            </constraints>
+            <properties/>
+            <border type="none"/>
+            <children>
+              <scrollpane id="fcd75">
+                <constraints>
+                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties/>
+                <border type="none"/>
+                <children>
+                  <component id="26d82" class="com.intellij.ui.table.JBTable" binding="loggingTable">
+                    <constraints/>
+                    <properties/>
+                  </component>
+                </children>
+              </scrollpane>
+            </children>
+          </grid>
         </children>
       </tabbedpane>
     </children>
