--- a/feedback_plugin/src/main/java/np1815/feedback/plugin/ui/FeedbackFiltersPanel.form
+++ b/feedback_plugin/src/main/java/np1815/feedback/plugin/ui/FeedbackFiltersPanel.form
@@ -153,13 +153,13 @@
           <text value="Endpoint name:"/>
         </properties>
       </component>
-      <component id="e3b0f" class="javax.swing.JTextField" binding="endpointNameTextField">
+      <component id="a9b11" class="javax.swing.JComboBox" binding="endpointNameComboBox">
         <constraints>
-          <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-            <preferred-size width="150" height="-1"/>
-          </grid>
+          <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
-        <properties/>
+        <properties>
+          <model/>
+        </properties>
       </component>
     </children>
   </grid>
